added input tracking

--- a/started/started/started.vcxproj.filters
+++ b/started/started/started.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="..\..\shunting_yard.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\input_delta.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
