added expression factory class

--- a/started/started/started.vcxproj
+++ b/started/started/started.vcxproj
@@ -149,6 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\expression_handler.h" />
     <ClInclude Include="..\..\input_delta.h" />
     <ClInclude Include="..\..\interface.hpp" />
     <ClInclude Include="..\..\shunting_yard.hpp" />
