--- a/started/started/started.vcxproj.filters
+++ b/started/started/started.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="..\..\input_delta.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\expression_handler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
