--- a/mat_solve/mat_solve/mat_solve.vcxproj
+++ b/mat_solve/mat_solve/mat_solve.vcxproj
@@ -146,6 +146,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="matrix.h" />
     <ClInclude Include="minConnected.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
