--- a/mat_solve/mat_solve/mat_solve.vcxproj.filters
+++ b/mat_solve/mat_solve/mat_solve.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="minConnected.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="matrix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
